--- a/connect4.css
+++ b/connect4.css
@@ -1,9 +1,10 @@
 /* game board table */
 
+
 #board td {
-  width: 90px;
-  height: 90px;
-  border: solid 1px #666;
+  width: 50px;
+  height: 50px;
+  border: solid 1px rgb(27, 27, 142);
   position: relative;
 
 }
@@ -11,10 +12,10 @@
 /* pieces are div within game table cells: draw as colored circles */
 
 .piece {
-  margin: 5px;
-  width: 80%;
-  height: 80%;
-  border-radius: 50%;
+  width: 85%;
+  height: 85%;
+  border-radius: 2rem;
+  position: relative;
 }
 
 .piece.p1 {
@@ -35,6 +36,8 @@
 
 #column-top td:hover {
   background-color: gold;
+  border-radius: 50%;
+  
 }
 
 
